apps/privatebin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: privatebin
  namespace: privatebin
spec:
  selector:
    app: privatebin
  ports:
    - port: 8080
      targetPort: 8080
